[project]
name = "task_hello_world_web"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Piscki Pratama", email = "pisckipratama@gmail.com"},
]
dependencies = [
    "flask>=3.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
start = "python3 src/task_hello_world_web/app.py"